# ClawGarda

./: README.md  policy.example.json  pyproject.toml
.github/workflows/: clawgarda-ci.yml
docs/: PRODUCT_REQUIREMENTS.md  SECURITY_REQUIREMENTS.md
src/clawgarda/: cli.py  copilot.py  dast.py  dast_reporting.py  deepscan.py  fixer.py  hygiene.py  llm_auth.py  policy.py  reporting.py  sast.py  sast_reporting.py  scanner.py
src/clawgarda/rules/: default.json
tests/: test_hygiene.py  test_llm_auth.py  test_scanner.py
