[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawgarda"
version = "0.1.0"
description = "MVP security scanner for OpenClaw workspaces"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenClaw" }]
license = { text = "MIT" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "License :: OSI Approved :: MIT License",
]

[project.scripts]
clawgarda = "clawgarda.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
